@@ -1,0 +1,1 @@
+usr/lib/*/libipa_hbac.so.*
