@@ -1,0 +1,1 @@
+usr/lib/python*/dist-packages/pyhbac.so
