@@ -1,1 +1,2 @@
-usr/lib/python*
+usr/lib/python*/dist-packages/pysss.so
+usr/lib/python*/dist-packages/*.py
