@@ -1,6 +1,5 @@
 usr/lib/sssd/*
 usr/lib/*/ldb/modules/ldb/memberof.so
-usr/lib/*/libipa_hbac.so*
 usr/lib/*/krb5/plugins/libkrb5/*
 usr/lib/*/sssd/lib*.so.*
 usr/share/locale/*/LC_MESSAGES/*
